crates/ir/tests/ir/snapshots/main__ir__lower__hkt__hkt_codegen_erasure.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__hkt_codegen_erasure

type Box[x10] = Box#0(x10)
trait Functor[o11] { fmap(o11[p11], (p11) -> q11): o11[q11] }
instance hkt__hkt_codegen_erasure.Functor[Box] { fmap=Functor$$Box$$fmap }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/list/Cons as Cons(j, List[j]) -> List[j]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
declare println: (g) -> Unit
declare to_list: (Vec[w10]) -> List[w10]

fn fold_box(v0: List[y11], v1: s11[y11], v2: (s11[y11], y11) -> s11[y11]) -> s11[y11] =
  let_join [recur] v3(v4: List[y11], v5: s11[y11], v6: (s11[y11], y11) -> s11[y11]) =
    switch v4 {
      1 ->
        v5
      0 (v7: y11, v8: List[y11]) ->
        let v9: s11[y11] = call_closure v6(v5, v7)
        jump v3(v8, v9, v6)
    }
  in
  jump v3(v0, v1, v2)

fn main() -> Unit =
  let v11: Vec[Int] = make_vec(1, 2, 4)
  let v12: List[Int] = call to_list(v11)
  let v13: Box[Int] = construct Box::Box#0(0)
  let v19: (Box[Int], Int) -> Box[Int] = make_closure(lambda$33, [])
  let v10: Box[Int] = call fold_box(v12, v13, v19)
  switch v10 {
    0 (v20: Int) ->
      let v21: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v22: Unit = call println(v21, v20)
      v22
  }

fn Functor$$Box$$fmap(v23: Box[x12], v24: (x12) -> z12) -> Box[z12] =
  switch v23 {
    0 (v25: x12) ->
      let v26: z12 = call_closure v24(v25)
      let v27: Box[z12] = construct Box::Box#0(v26)
      v27
  }

fn lambda$33(v14: Box[Int], v15: Int) -> Box[Int] =
  switch v14 {
    0 (v16: Int) ->
      let v17: Int = add_int(v16, v15)
      let v18: Box[Int] = construct Box::Box#0(v17)
      v18
  }
