crates/ir/tests/ir/snapshots/main__ir__lower__hkt__hkt_function.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__hkt_function

type Box[x10] = Box#0(x10)
trait Functor[o11] { fmap(o11[p11], (p11) -> q11): o11[q11] }
trait Hoist[r11] { hoist(s11[r11], (s11[r11]) -> t11[r11]): t11[r11] }
instance hkt__hkt_function.Functor[Box] { fmap=Functor$$Box$$fmap }
instance hkt__hkt_function.Hoist[Int] { hoist=Hoist$$Int$$hoist }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn apply(v0: Dict[hkt__hkt_function.Functor, y11], v1: y11[a12]) -> y11[a12] =
  let v4: (a12) -> a12 = make_closure(lambda$34, [])
  let v5: y11[a12] = trait_call hkt__hkt_function.Functor.fmap(v0, v1, v4)
  v5

fn main() -> Unit =
  let v6: Box[Int] = construct Box::Box#0(42)
  let v7: Dict[hkt__hkt_function.Functor, Box] = get_dict hkt__hkt_function.Functor[Box]
  let v8: Box[Int] = call apply(v7, v6)
  switch v8 {
    0 (v9: Int) ->
      let v10: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v11: Unit = call println(v10, v9)
      v11
  }

fn Functor$$Box$$fmap(v12: Box[s12], v13: (s12) -> u12) -> Box[u12] =
  switch v12 {
    0 (v14: s12) ->
      let v15: u12 = call_closure v13(v14)
      let v16: Box[u12] = construct Box::Box#0(v15)
      v16
  }

fn Hoist$$Int$$hoist(v17: w12[Int], v18: (w12[Int]) -> x12[Int]) -> x12[Int] =
  let v19: x12[Int] = call_closure v18(v17)
  v19

fn lambda$34(v3: a12) -> a12 =
  v3
