crates/ir/tests/ir/snapshots/main__ir__lower__hkt__hkt_qualifier_lambda_own_param.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__hkt_qualifier_lambda_own_param

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn consume_once(v0: k8[~l8], v1: (k8[~l8]) -> k8[~l8]) -> k8[~l8] =
  let v2: k8[~l8] = call_closure v1(v0)
  v2
