crates/ir/tests/ir/snapshots/main__ir__lower__hkt__hkt_qualifier_shared_to_requ.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__hkt_qualifier_shared_to_requ

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn dup(v0: l8) -> (l8, l8) =
  let v1: (l8, l8) = tuple(v0, v0)
  v1

fn test_shared(v2: o8[p8]) -> (o8[p8], o8[p8]) =
  let v3: (o8[p8], o8[p8]) = call dup(v2)
  v3
