crates/ir/tests/ir/snapshots/main__ir__lower__hkt__impl_vec_distinct_params.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__impl_vec_distinct_params

trait Tag[n11] { tag(n11): String }
instance hkt__impl_vec_distinct_params.Tag[Vec$Int] { tag=Tag$$Vec$Int$$tag }
instance hkt__impl_vec_distinct_params.Tag[Vec$String] { tag=Tag$$Vec$String$$tag }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Vec[Int] = make_vec(1, 2, 3)
  let v1: Vec[String] = make_vec("a", "b", "c")
  let v2: Dict[hkt__impl_vec_distinct_params.Tag, Vec[Int]] = get_dict hkt__impl_vec_distinct_params.Tag[Vec[Int]]
  let v3: String = trait_call hkt__impl_vec_distinct_params.Tag.tag(v2, v0)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v4, v3)
  let v7: Dict[hkt__impl_vec_distinct_params.Tag, Vec[String]] = get_dict hkt__impl_vec_distinct_params.Tag[Vec[String]]
  let v8: String = trait_call hkt__impl_vec_distinct_params.Tag.tag(v7, v1)
  let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v6, v8)
  v9

fn Tag$$Vec$Int$$tag(v10: Vec[Int]) -> String =
  "ints"

fn Tag$$Vec$String$$tag(v11: Vec[String]) -> String =
  "strings"
