crates/ir/tests/ir/snapshots/main__ir__lower__hkt__impl_vec_trait.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__impl_vec_trait

trait MyTrait[k8] { check(k8): String }
instance hkt__impl_vec_trait.MyTrait[Vec$$Var0] { check=MyTrait$$Vec$$Var0$$check }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn MyTrait$$Vec$$Var0$$check(v0: Dict[hkt__impl_vec_trait.MyTrait, l8], v1: Vec[l8]) -> String =
  "vec"
