crates/ir/tests/ir/snapshots/main__ir__lower__hkt__partial_apply_foldable.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__partial_apply_foldable

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
fn sum_values(v0: Map[String, Int]) -> Int =
  let v5: (Int, Int) -> Int = make_closure(lambda$31, [])
  let v1: Dict[core/foldable.Foldable, Map[String]] = get_dict core/foldable.Foldable[Map[String]]
  let v6: Int = trait_call core/foldable.Foldable.fold(v1, v0, 0, v5)
  v6

fn lambda$31(v2: Int, v3: Int) -> Int =
  let v4: Int = add_int(v2, v3)
  v4
